# simd-experiments

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
examples/: CMakeLists.txt  common.hpp  leetcode-2696.cpp  leetcode-2938.cpp  leetcode-67.cpp  leetcode-921.cpp
include/rimd/: core.hpp  utils.hpp
include/rimd/details/: misc.hpp  sse.hpp
misc/: super-optimize-leetcode921.py
src/: CMakeLists.txt  common.hpp  leetcode-2938.cpp  leetcode-921.cpp  simd-shuffle.cpp
